syntax = "proto3";

package elys.incentive;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/elys-network/elys/x/incentive/types";

  
// GenesisState defines the incentive module's genesis state.
message GenesisState {
}
